--- a/public/chatbot-ui.css
+++ b/public/chatbot-ui.css
@@ -280,13 +280,13 @@ border: none;
   border-radius: 4px;
   cursor: pointer;
   margin: 5px;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 .btn-primary:hover {
-  background-color: #680000 !important;
-  color: #fff !important;
-  transform: scale(1.1);
+  background-color: white !important;
+  color: #000 !important;
+  transform: scale(1.01);
 }
 
 @media (max-width: 500px) {
