--- a/public/chatbot-ui.css
+++ b/public/chatbot-ui.css
@@ -58,6 +58,9 @@
   animation: sbchatblink 3s linear infinite;
   transition: all .2s ease;
   animation: sbchatblink 3s linear infinite;
+  font-size: 10px;
+  width: 140px;
+  
 }
 .triangle{
   width: 10px;
