--- a/src/Components/Admin/Profile.css
+++ b/src/Components/Admin/Profile.css
@@ -2,6 +2,10 @@
 .profile {
   background-color: #f1f1f1;
 }
+.profile-user {
+  background-color: #f1f1f1;
+  margin-top: -4px;
+}
 .profile-header {
   padding: 40px 30px;
   background-color: #2a3346;
@@ -13,7 +17,7 @@
   background-color: #d4d4d4;
 }
 .profile-tab {
-  padding: 15px 30px;
+  padding: 15px 31px;
   cursor: pointer;
 }
 .active-tab {
@@ -87,4 +91,9 @@
   color: black;
   margin-top: 10px;
   margin-bottom: 0;
+}
+
+.profile-right-col-title {
+  font-weight: 500 !important;
+  font-size: 32px !important;
 }
